Summary of important user-visible changes for statistics 1.2.0:
-------------------------------------------------------------------

 ** The following functions are new in 1.2.0:

      regress_gp

Summary of important user-visible changes for statistics 1.1.3:
-------------------------------------------------------------------

 ** The following functions are new in 1.1.3:

      copularnd mvtrnd

 ** The functions mnpdf and mnrnd are now also usable for greater numbers
    of categories for which the rows do not exactly sum to 1.

Summary of important user-visible changes for statistics 1.1.2:
-------------------------------------------------------------------

 ** The following functions are new in 1.1.2:

      mnpdf mnrnd

 ** The package is now dependent on the io package (version 1.0.18 or
    later) since the functions that it depended of from miscellaneous
    package have been moved to io.

 ** The function `kmeans' now accepts the 'emptyaction' property with
    the 'singleton' value. This allows for the kmeans algorithm to handle
    empty cluster better. It also throws an error if the user does not
    request an empty cluster handling, and there is an empty cluster.
    Plus, the returned items are now a closer match to Matlab.

Summary of important user-visible changes for statistics 1.1.1:
-------------------------------------------------------------------

 ** The following functions are new in 1.1.1:

      monotone_smooth kmeans jackknife

 ** Bug fixes on the functions:

      normalise_distribution  combnk
      repanova

 ** The following functions were removed since equivalents are now
    part of GNU octave core:

      zscore

 ** boxplot.m now returns a structure with handles to the plot elemenets.

Summary of important user-visible changes for statistics 1.1.0:
-------------------------------------------------------------------

 ** IMPORTANT note about `fstat' shadowing core library function:
